# c_lua-syslog

./: luasyslog.c
examples/: check.lua  test.lua
openwrt-package-related/: Makefile  README.md
openwrt-package-related/codes/: CMakeLists.txt  default.cmake
